--- a/sonidos.html
+++ b/sonidos.html
@@ -9,12 +9,12 @@
 <body>
     <main>
         <h1>Sonido</h1>
-            <audio src="./niagara-falls-37014.mp3" controls>
+            <audio src="archivos/niagara-falls-37014.mp3" controls>
                 <p>
                     Tu navegador no soporta audio HTML5. Aquí está el <a href="https://pixabay.com/sound-effects/niagara-falls-37014/">enlace del audio</a>.
                 </p>
             </audio>
-            <audio src="./niagara-waters-roaring-79533.mp3" controls>
+            <audio src="archivos/niagara-waters-roaring-79533.mp3" controls>
                 <p>
                     Tu navegador no soporta audio HTML5. Aquí está el <a href="https://pixabay.com/sound-effects/niagara-waters-roaring-79533/">enlace del audio</a>.
                 </p>
