--- a/videos.html
+++ b/videos.html
@@ -9,12 +9,12 @@
 <body>
     <main>
         <h1>Vídeos</h1>
-            <video src="./cat-35693.mp4" controls muted width="500px">
+            <video src="archivos/cat-35693.mp4" controls muted width="500px">
                 <p>
                     Tu navegador no soporta video HTML5. Aquí está el <a href="https://pixabay.com/videos/cat-sleep-animal-sleeping-pet-35693/">enlace del video</a>.
                 </p>
             </video>
-            <video src="./waterfall-69786.mp4" controls muted width="500px">
+            <video src="archivos/waterfall-69786.mp4" controls muted width="500px">
                 <p>
                     Tu navegador no soporta video HTML5. Aquí está el <a href="https://pixabay.com/videos/waterfall-river-forest-trees-falls-69786/">enlace del video</a>.
                 </p>
