--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Gimnasio El Gordo Gervasio</title>
 </head>
 <body>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="./gatitos.html">Meditación con gatitos y cascadas</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <table border="1">
        <thead>
         <tr>
@@ -60,5 +68,12 @@
         </tr>
     </tfoot>     
     </table>
+    <footer>
+        <ul>
+            <li><a href="./imagenes.html">Imágenes inspiradoras</a></li>
+            <li><a href="./videos.html">Vídeos relajantes</a></li>
+            <li><a href="./sonidos.html">Sonidos para meditar</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
