--- a/sonidos.html
+++ b/sonidos.html
@@ -20,5 +20,10 @@
                 </p>
             </audio>
     </main>
+    <footer>
+        <a href="./gatitos.html">Volver</a>
+        <a href="./videos.html">Vídeos relajantes</a>
+        <a href="./imagenes.html">Imágenes inspiradoras</a>
+    </footer>
 </body>
 </html>
