--- a/videos.html
+++ b/videos.html
@@ -20,5 +20,10 @@
                 </p>
             </video>
     </main>
+    <footer>
+        <a href="./gatitos.html">Volver</a>
+        <a href="./imagenes.html">Imagenes inspiradoras</a>
+        <a href="./sonidos.html">Sonidos para meditar</a>
+    </footer>
 </body>
 </html>
