--- a/imagenes.html
+++ b/imagenes.html
@@ -12,5 +12,10 @@
             <img src="https://images.pexels.com/photos/416160/pexels-photo-416160.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="500px">
             <img src="https://images.pexels.com/photos/1637146/pexels-photo-1637146.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="500px">
     </main>
+    <footer>
+        <a href="./gatitos.html">Volver</a>
+        <a href="./videos.html">Vídeos relajantes</a>
+        <a href="./sonidos.html">Sonidos para meditar</a>
+    </footer>
 </body>
 </html>
