--- a/gatitos.html
+++ b/gatitos.html
@@ -11,12 +11,45 @@
         <nav class="menu">
             <ul>
                 <li><a href="./index.html">Gimnasio El Gordo Gervasio</a></li>
+                <li><a href="#Imágenes">Imágenes inspiradoras</a></li>
+                <li><a href="#Vídeos">Vídeos relajantes</a></li>
+                <li><a href="#Sonidos">Sonidos para meditar</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>La mejor página para relajarse del mundo.</h1>
+        <section>
+        <h1 id="Imágenes">Imágenes</h1>
+            <img src="https://images.pexels.com/photos/416160/pexels-photo-416160.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="500px">
+            <img src="https://images.pexels.com/photos/1637146/pexels-photo-1637146.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="500px">
+        </section>
+        <section>
+            <h1 id="Vídeos">Vídeos</h1>
+                <video src="archivos/cat-35693.mp4" controls muted width="500px">
+                    <p>
+                    Tu navegador no soporta video HTML5. Aquí está el <a href="https://pixabay.com/videos/cat-sleep-animal-sleeping-pet-35693/">enlace del video</a>.
+                    </p>
+                </video>
+                <video src="archivos/waterfall-69786.mp4" controls muted width="500px">
+                    <p>
+                        Tu navegador no soporta video HTML5. Aquí está el <a href="https://pixabay.com/videos/waterfall-river-forest-trees-falls-69786/">enlace del video</a>.
+                    </p>
+                </video>
+        </section>
+            <section>
+                <h1 id="Sonidos">Sonídos</h1>
+                <audio src="archivos/niagara-falls-37014.mp3" controls>
+                    <p>
+                        Tu navegador no soporta audio HTML5. Aquí está el <a href="https://pixabay.com/sound-effects/niagara-falls-37014/">enlace del audio</a>.
+                    </p>
+                </audio>
+                <audio src="archivos/niagara-waters-roaring-79533.mp3" controls>
+                    <p>
+                        Tu navegador no soporta audio HTML5. Aquí está el <a href="https://pixabay.com/sound-effects/niagara-waters-roaring-79533/">enlace del audio</a>.
+                    </p>
+                </audio>
+                </section>
         <ul>
             <li><a href="./imagenes.html">Imágenes inspiradoras</a></li>
             <li><a href="./videos.html">Vídeos relajantes</a></li>
